# autogen-quant-invest-agent

./: .env.template  .gitignore  OAI_CONFIG_LIST.template.json  README.md  agent_quant.py  agent_workflow_e2e.py  pyproject.toml
agent/: agent_dict.py  agent_registry.py  group_chat_manager.py  signal_analysis_agent.py  stock_analysis_agent.py  stock_report_agent.py  strategy_idea_agent.py  user_proxy_agent.py
docs/: strategie_gen_prompt.md
sample/: agent_quant_prototype.py  backtest_metrics.txt  backtest_results.xlsx  chat_summary.txt  nested_chat_prototype.py  stock_data.csv  stock_signals.csv  strategy_idea.json
sample/output/Sell in May, buy in October/: backtest_metrics.txt  backtest_results.xlsx  chat_summary.txt  stock_data.csv  stock_signals.csv
sample/strategy_idea/: strategy_ideas.json
utils/: const.py  datamodels.py  functions.py  llm_config.py  llm_plot.py  llm_tool_use.py  web_search.py
